--- a/sass/components/reset.sass
+++ b/sass/components/reset.sass
@@ -62,82 +62,68 @@ button
     font-weight: 900
 
 .row, .col
+    height: 100%
 
     &.center-center
-        height: 100%
         justify-content: center
         align-items: center
 
     &.left-top
-        height: 100%
         justify-content: flex-start
         align-items: flex-start
 
     &.right-bottom
-        height: 100%
         justify-content: flex-end
         align-items: flex-end
 
 .row
 
     &.left-center
-        height: 100%
-        justify-content: center
-        align-items: flex-start
+        justify-content: flex-start
+        align-items: center
 
     &.left-bottom
-        height: 100%
-        justify-content: center
+        justify-content: flex-start
         align-items: flex-end
 
     &.center-top
-        height: 100%
-        justify-content: flex-start
-        align-items: center
+        justify-content: center
+        align-items: flex-start
 
     &.center-bottom
-        height: 100%
-        justify-content: flex-end
-        align-items: center
-
-    &.right-top
-        height: 100%
-        justify-content: flex-start
+        justify-content: center
         align-items: flex-end
 
+    &.right-top
+        justify-content: flex-end
+        align-items: flex-start
+
     &.right-center
-        height: 100%
         justify-content: flex-end
         align-items: center
 
 .col
 
     &.left-center
-        height: 100%
         justify-content: center
         align-items: flex-start
 
     &.left-bottom
-        height: 100%
-        justify-content: center
-        align-items: flex-end
+        justify-content: flex-end
+        align-items: flex-start
 
     &.center-top
-        height: 100%
         justify-content: flex-start
         align-items: center
 
     &.center-bottom
-        height: 100%
         justify-content: flex-end
         align-items: center
 
     &.right-top
-        height: 100%
         justify-content: flex-start
         align-items: flex-end
 
     &.right-center
-        height: 100%
         justify-content: center
         align-items: flex-end
